prueba de video webm

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h6>Prueba de página</h6>
+
+ <video width="640" height="360" controls>
+    <source src="recursos/progressbar.webm" type="video/webm">
+    Tu navegador no soporta el formato de video WebM.
+  </video>
 </body>
 </html>
